issues with footer alignment TODO: fix margins around section containers

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -2381,7 +2381,7 @@ table.alt tbody tr td {
     font-size: 1em;
     color: #c79cc8; }
   #footer > * {
-    width: calc(45% - 2em);
+    width: calc(45% - 3em);
     margin-left: 2em; }
   #footer .copyright {
     width: 100%;
